[MODORDERS-1403]. Update tests